--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-instagram-embed": "^3.0.0",
     "react-query": "^3.21.0",
     "tailwindcss": "^2.2.7"
   },
